[package]
name = "idlset"
version = "0.1.13"
authors = ["William Brown <william@blackhats.net.au>"]

description = "Fast u64 set operations library"
documentation = "https://docs.rs/idlset/latest/idlset/"
homepage = "https://github.com/kanidm/idlset/"
repostiory = "https://github.com/kanidm/idlset/"
readme = "README.md"
keywords = ["data-structures", "sets", "compression", "u64"]
categories = ["data-structures", "algorithms", "compression"]
license = "MPL-2.0"

[dependencies]
time = "0.2"
serde = "1.0"
serde_derive = "1.0"
smallvec = { version = "1.4", features = ["serde"], optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_idl"
harness = false

[features]
use_smallvec = ["smallvec"]
tracksize = []
